--- a/notebooks/news_prompt.ipynb
+++ b/notebooks/news_prompt.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,147 @@
     "\n",
     "# Create and retrieve a Cohere API key from os.cohere.ai\n",
     "co = cohere.Client(api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Stumbled across an interesting case, a woman facing eviction from the home that she inherited from her brother in 2007. Turns out her brother was in business with a notorious international criminal Paul Le Roux, who is currently serving 25 years in a New York prison.\"\n",
+      "Title: \"Stumbled across an interesting case, a woman facing eviction from the home that she inherited from her brother in 2007. Turns out her brother was in business with a notorious international criminal Paul Le Roux, who is currently serving 25 years in a New York prison.\" \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt='''\"Stumbled across an interesting case, a woman facing eviction from the home that she inherited from her brother in 2007. Turns out her brother was in business with a notorious international criminal Paul Le Roux, who is currently serving 25 years in a New York prison.\"\n",
+    "Title: \"Stumbled across an interesting case, a woman facing eviction from the home that she inherited from her brother in 2007. Turns out her brother was in business with a notorious international criminal Paul Le Roux, who is currently serving 25 years in a New York prison.\" \n",
+    "'''\n",
+    "print(prompt)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_generations = 5\n",
+    "\n",
+    "prediction = co.generate(\n",
+    "    model='large',\n",
+    "    prompt=prompt,\n",
+    "    return_likelihoods = 'GENERATION',\n",
+    "    stop_sequences=['\"'],\n",
+    "    max_tokens=50,\n",
+    "    temperature=0.7,\n",
+    "    num_generations=n_generations,\n",
+    "    k=0,\n",
+    "    p=0.75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get list of generations\n",
+    "gens = []\n",
+    "likelihoods = []\n",
+    "for gen in prediction.generations:\n",
+    "    gens.append(gen.text)\n",
+    "    \n",
+    "    sum_likelihood = 0\n",
+    "    for t in gen.token_likelihoods:\n",
+    "        sum_likelihood += t.likelihood\n",
+    "    # Get sum of likelihoods\n",
+    "    likelihoods.append(sum_likelihood)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>generation</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\\nCaption: \"</td>\n",
+       "      <td>-4.452247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\\nStory Description: \"</td>\n",
+       "      <td>-10.607281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\\nWHEREAS: The business of the aforementioned Paul Le Roux is international fraud and money laundering; and\\nWHEREAS: Le Roux was able to siphon millions of dollars from the aforementioned fraudulent business and then use that money to</td>\n",
+       "      <td>-89.119294</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                                                                                                                                    generation  \\\n",
+       "0                                                                                                                                                                                                                                 \\nCaption: \"   \n",
+       "1                                                                                                                                                                                                                       \\nStory Description: \"   \n",
+       "2  \\nWHEREAS: The business of the aforementioned Paul Le Roux is international fraud and money laundering; and\\nWHEREAS: Le Roux was able to siphon millions of dollars from the aforementioned fraudulent business and then use that money to   \n",
+       "\n",
+       "       score  \n",
+       "0  -4.452247  \n",
+       "1 -10.607281  \n",
+       "2 -89.119294  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.options.display.max_colwidth = 400\n",
+    "# Create a dataframe for the generated sentences and their likelihood scores\n",
+    "df = pd.DataFrame({'generation':gens, 'score': likelihoods})\n",
+    "# Drop duplicates\n",
+    "df = df.drop_duplicates(subset=['generation'])\n",
+    "# Sort by highest sum likelihood\n",
+    "df = df.sort_values('score', ascending=False, ignore_index=True)\n",
+    "# print('Candidate summaries for the sentence: \\n\"Stumbled across an interesting case, a woman facing eviction from the home that she inherited from her brother in 2007. Turns out her brother was in business with a notorious international criminal Paul Le Roux, who is currently serving 25 years in a New York prison..\"')\n",
+    "df"
    ]
   }
  ],
